--- a/templates/pages/security/registration.html.twig
+++ b/templates/pages/security/registration.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
 <div class="container">
-    <h1 class="mt-4 text-center text-light" >Formulaire d'inscription</h1>
+    <h1 class="mt-4">Formulaire d'inscription</h1>
 
     {{ form(form) }}
    
