--- a/templates/recipe/show.html.twig
+++ b/templates/recipe/show.html.twig
@@ -17,8 +17,10 @@
 {% if is_granted('ROLE_ADMIN') %}
 		{% if recipe.isPublic is same as true %}
 		<a href="{{ path('recipe.edit_public', {id: recipe.id}) }}" class="btn btn-danger">Modifier la recette</a>
+		<a href="{{ path('recipe.delete_public', {id: recipe.id}) }}" class="btn btn-danger">Supprimer la recette</a>
     {% else %}
 		<a href="{{ path('recipe.edit', {id: recipe.id}) }}" class="btn btn-danger">Modifier la recette</a>
+		<a href="{{ path('recipe.delete', {id: recipe.id}) }}" class="btn btn-danger">Supprimer la recette</a>
 		{% endif %}
 		{% endif %}
 		<div class="recipe__image easyadmin-lightbox">
