--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>
-			{% block title %}Sandrine Coupart
+			{% block title %}Welcome!
 			{% endblock %}
 		</title>
 		<link rel="stylesheet" href="{{ asset('assets/css/bootstrap.min.css') }}">
@@ -14,6 +14,7 @@
 		<link
 		rel="stylesheet" href="/style.css">
 	
+		{# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
 		{% block stylesheets %}
 			{{ encore_entry_link_tags('app') }}
 		{% endblock %}
@@ -24,7 +25,7 @@
 			<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 		{% endblock %}
 	</head>
-	<body style="display: flex; flex-direction: column; min-height: 100vh; width: 100%; background-color:  #82d7e9;">
+	<body style="display: flex; flex-direction: column; min-height: 100vh; width: 100%;">
 		{% block header %}
 		{% include "partials/_nav.html.twig" %}
 		{% endblock %}
