--- a/templates/pages/contact/index.html.twig
+++ b/templates/pages/contact/index.html.twig
@@ -3,14 +3,13 @@
 {% block title %}Contact{% endblock %}
 
 {% block body %}
-
 <div class="container">
  {% for message in app.flashes('success') %}
         <div class="alert alert-success">
             {{ message }}
         </div>
-    {% endfor %}
-<h1 class="text-dark text-center mt-4" style="font-family: \"Libre Baskerville\", serif;">Contact</h1>
+    {%endfor %}
+<h1>Contact</h1>
 {{ form(form) }}
 </div>
 
