--- a/templates/partials/_nav.html.twig
+++ b/templates/partials/_nav.html.twig
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-info text-light" style="background-color: #076a67;">
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary text-light">
 	<div class="container-fluid">
 		<a class="navbar-brand" href="#"></a>
 		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
@@ -51,9 +51,9 @@
 							<a class="dropdown-item  fw-bold" href="/admin">Tableau de bord</a>
 						{% endif %}
 						<div class="dropdown-divider"></div>
-						<a class="dropdown-item fw-bold" href="{{ path('security.logout') }}">Déconnexion</a>
+						<a class="dropdown-item fw-bold" href="{{ path('security.logout') }}">Déconnextion</a>
 										{% endif %}
-				
+				</li>
 			</div>
 		</li>
 	</ul>
