--- a/templates/recipe/recipes.html.twig
+++ b/templates/recipe/recipes.html.twig
@@ -4,7 +4,7 @@
 {% endblock %}
 {% block body %}
 	<div class="container mt-4">
-		<h1>Collection de recettes</h1>
+		<h1 class="text-center">Collection de recettes</h1>
 
 		<div class="d-flex justify-content-center flex-wrap">
 			{% if is_granted('ROLE_ADMIN') %}
@@ -14,12 +14,17 @@
 							{{ recipe.id }}</div>
 						<div class="card-body">
 							<h4 class="card-title">
+							{% if recipe.isPublic is same as false %}
 								<a href="{{ path('recipe.show', {id: recipe.id}) }}">{{ recipe.name }}</a>
+              {% else %}
+              <a href="{{ path('recipe.show_public', {id: recipe.id}) }}">{{ recipe.name }}</a>
+							{% endif %}
+								
 							</h4>
 							<div class="recipe__image card-image">
 								<img style="max-width: 350px;" src="{{ vich_uploader_asset(recipe, 'imageFile') }}">
 							</div>
-							<p class="card-text">{{ recipe.description|slice(0, 100) ~ '...'  }}</p>
+							<p class="card-text">{{ recipe.description|raw }}</p>
 						</div>
 					</div>
 
