--- a/templates/pages/footer/legal_notice.html.twig
+++ b/templates/pages/footer/legal_notice.html.twig
@@ -18,7 +18,7 @@
 		</p>
 		<h3 class="mt-4">Hébergement</h3>
 		<p class="mb-4">
-			Le Site est hébergé par la société PlanetHoster,<br>
+			Le Site est hébergé par la société privée Créatech,<br>
 			situé 4416 Louis-B.-Mayer Laval, Québec Canada H7P 0G1, (contact téléphonique ou email : (+1) 855 774 4678).
 		</p>
 		<h3 class="mt-4">Directeur de publication</h3>
