--- a/templates/recipe/index.html.twig
+++ b/templates/recipe/index.html.twig
@@ -3,8 +3,9 @@
 	Mes recettes
 {% endblock %}
 {% block body %}
+<div style="height: 50px; z-index: -3; margin-top: -10px;">{% include "partials/_header_img.html.twig" %}</div>
 	<div class="container mt-4">
-		<h1 class="text-center">Mes recettes</h1>
+		<h1 class="text-center bg-primary" style="border-radius: 15px; padding: 10px; width: auto;">Mes recettes</h1>
 		<div class="d-flex justify-content-center flex-wrap">
 			   	{% if app.user.recipes %}
 					{% for recipe in app.user.recipes %}
@@ -14,7 +15,11 @@
 						{{ recipe.id }}</div>
 					<div class="card-body">
 						<h4 class="card-title">
+						{% if recipe.isPublic is same as false %}					
 							<a href="{{ path('recipe.show', {id: recipe.id}) }}">{{ recipe.name }}</a>
+							{% else %}
+							<a href="{{ path('recipe.show_public', {id: recipe.id}) }}">{{ recipe.name }}</a>
+								{% endif %}
 						</h4>
 						<div class="recipe__image card-image">
 							<img style="max-width: 350px;" src="{{ vich_uploader_asset(recipe, 'imageFile') }}">
