--- a/templates/pages/home/index.html.twig
+++ b/templates/pages/home/index.html.twig
@@ -61,21 +61,21 @@
 		<br>
 		<br>
 		<div class="recipes mb-5">
-			<h3 class="mt-4 text-center mb-5" style="background-color: rgb(135, 219, 237); height: auto;">Recettes</h3>
+			<h3 class="mt-4 text-center mb-5 rounded" style="background-color: rgb(135, 219, 237); height: auto;">Recettes</h3>
 
-			<div class="d-flex justify-content-center flex-wrap">
+			<div class="d-flex justify-content-between flex-wrap rounded" style="background-color: rgb(135, 219, 237);">
 				{% for recipe in recipes %}
-					<div class="card border-primary mb-3 me-3" style="max-width: 20rem;">
-						<div class="card-header">Recette numéro
+					<div class="card border-primary mb-3" style="max-width: 20rem; margin: 0;">
+						<div class="card-header" style="background-color: rgb(135, 219, 237);">Recette numéro
 							{{ recipe.id }}</div>
-						<div class="card-body">
-							<h4 class="card-title">
-								<a href="{{ path('recipe.show_public', {id: recipe.id}) }}">{{ recipe.name }}</a>
+						<div class="card-body"  style="background-color: rgb(135, 219, 237);">
+							<h4 class="card-title text-light">
+								<a href="{{ path('recipe.show_public', {id: recipe.id}) }}" class="text-light">{{ recipe.name }}</a>
 							</h4>
 							<div class="recipe__image card-image">
-								<img style="min-width: 350px;" src="{{ vich_uploader_asset(recipe, 'imageFile') }}" class="img-fluid">
+								<img style="min-width: 350px; min-height: 250;" src="{{ vich_uploader_asset(recipe, 'imageFile') }}" class="img-fluid rounded">
 							</div>
-							<p class="card-text">{{ recipe.description|striptags|slice(0,50) ~ '...' }}</p>
+							<p class="card-text text-dark fs-5">{{ recipe.description|raw }}</p>
 						</div>
 					</div>
 				{% endfor %}
