--- a/templates/recipe/show.html.twig
+++ b/templates/recipe/show.html.twig
@@ -17,13 +17,13 @@
 		<h1 class="mt-4 mb-4 text-capitalize text-light">{{ recipe.name }}</h1>
 
 		<div class="recipe__image easyadmin-lightbox">
-			<img style="max-width: 350px;" src="{{ vich_uploader_asset(recipe, 'imageFile') }}">
+			<img style="max-width: 650px;" src="{{ vich_uploader_asset(recipe, 'imageFile') }}">
 		</div>
 
 		<h6s>La moyenne de cette recette est de
 			{{ recipe.average|number_format(2,'.', '.') }}
 			/ 5</h6s>
-<div style="background-color: #87dbed; padding: 10px;">
+<div style="background-color: #87dbed; padding: 10px;" class="rounded">
 		<h5 class="mt-3 text-light">Description:</h5>
 		<p class="fs-4">{{ recipe.description|raw }}</p>
 </div>
@@ -33,12 +33,12 @@
 		</h5>
 
 		{% if recipe.pauseTime %}
-			<h5 class="mt-3 text-light">Temps de pause (en minutes):
+			<h5 class="mt-3 text-light">Temps de repos (en minutes):
 				<span class="badge bg-primary mt-1">
 					{{ recipe.pauseTime }}</span>
 			</h5>
 		{% else %}
-			<h5 class="mt-3 text-light">Temps non renseigné</p>
+			<h5 class="mt-3 text-light">Temps de repos non renseigné</p>
 		{% endif %}
 
 		<h5 class="mt-3 text-light">Temps de cuisson (en minutes):
@@ -50,7 +50,7 @@
 		{% for ingredient in recipe.ingredients %}
 			<span class="badge bg-primary mb-4 fs-6">{{ ingredient.name }}</span>
 		{% endfor %}
-<div style="background-color: #87dbed; padding: 10px;">
+<div style="background-color: #87dbed; padding: 10px;" class="rounded">
 		<h5 class="mt-3 text-light">Étapes :</h5>
 		{{ recipe.steps|raw }}
 </div>
