--- a/templates/recipe/show_public.html.twig
+++ b/templates/recipe/show_public.html.twig
@@ -22,7 +22,7 @@
 		<h5 class="text-light">La moyenne de cette recette est de
 			{{ recipe.average|number_format(2,'.', '.') }}
 			/ 5</h5>
-<div style="background-color: #87dbed; padding: 10px;">
+<div style="background-color: #87dbed; padding: 10px;" class="rounded">
 		<h5 class="mt-3 text-light">Description:</h5>
 		<p class="text-light">{{ recipe.description|raw }}</p>
 </div>
@@ -31,7 +31,7 @@
 		</h5>
 
 		{% if recipe.pauseTime %}
-			<h5 class="mt-3 text-light">Temps de pause (en minutes):
+			<h5 class="mt-3 text-light">Temps de repos (en minutes):
 				<span class="badge bg-primary mt-1">
 					{{ recipe.pauseTime }}</span>
 			</h5>
@@ -49,7 +49,7 @@
 		{% for ingredient in recipe.ingredients %}
 			<span class="badge bg-primary mb-4">{{ ingredient.name }}</span>
 		{% endfor %}
-<div style="background-color:  #87dbed; padding: 10px;">
+<div style="background-color:  #87dbed; padding: 10px;" class="rounded">
 		<h5 class="mt-3 text-light">Étapes: </h5>
 		
 		<p>{{ recipe.steps|raw }}</p>
