--- a/templates/pages/home/index.html.twig
+++ b/templates/pages/home/index.html.twig
@@ -11,7 +11,8 @@
 			<span class="mt-4" class="margin-top: 5em;">{% include "partials/_doctor_img.html.twig" %}</span>
 		</h1>
 		<div class="jumbotron">
-			<div class="d-flex flex-lg-row justify-content-lg-between flex-sm-column about align-items-center" style="background-color: rgb(135, 219, 237); height: auto;">
+			<div class="d-flex flex-lg-row justify-content-lg-between flex-sm-column about align-items-center" 
+			style="background-color: rgb(135, 219, 237); height: auto;">
 				<div class="col-md-6 col-sm-6 col-xs-12  d-flex flex-column text-center me-5">
 					<h3 class="mb-5 mt-4">À  propos</h3>
 					<p class="lead fs-4 text-center ms-5">Je m'appelle Sandrine Coupart et je suis diététicienne-nutritionniste dont le cabinet est situé à Caen. En tant que
@@ -61,9 +62,11 @@
 		<br>
 		<br>
 		<div class="recipes mb-5">
-			<h3 class="mt-4 text-center mb-5 rounded" style="background-color: rgb(135, 219, 237); height: auto;">Recettes</h3>
+			<h3 class="mt-4 text-center mb-5 rounded" 
+			style="background-color: rgb(135, 219, 237); height: auto;">Recettes</h3>
 
-			<div class="d-flex justify-content-between flex-wrap rounded" style="background-color: rgb(135, 219, 237);">
+			<div class="d-flex justify-content-between flex-wrap rounded" 
+			style="background-color: rgb(135, 219, 237);">
 				{% for recipe in recipes %}
 					<div class="card border-primary mb-3" style="max-width: 20rem; margin: 0;">
 						<div class="card-header" style="background-color: rgb(135, 219, 237);">Recette numéro
