--- a/public/style.css
+++ b/public/style.css
@@ -1,8 +1,3 @@
-
-body, *{
-  box-sizing: border-box;
-}
-
 .choiceList-wrapper {
   display: flex;
   flex-wrap: wrap;
@@ -50,7 +45,7 @@ li {
   background-color: rgb(43, 72, 79);
 }
 .navbar {
-  background-color: #076a67;
+  background-color: rgb(7, 106, 103);
 }
 
 .dropdown-menu {
@@ -58,7 +53,4 @@ li {
 }
 .dropdown-item:hover {
   background-color: rgb(35, 190, 190);
-}
-.choose_color {
-  background-color: #87dbed;
 }
