--- a/templates/partials/_header_img.html.twig
+++ b/templates/partials/_header_img.html.twig
@@ -1,3 +1,5 @@
 <div style="z-index: -2;" class="mb-2">
-<img src="/assets/images/bg.jpg" alt="bg" style="width: 100%; min-height: 700px; margin-top: -18em; position: fixed;" class="img-fluid mb-4 sm-h-50" />
+<img src="/assets/images/bg_homepage.jpg" alt="bg" 
+style="width: 100%; min-height: 700px; margin-top: -18em; position: fixed;" 
+class="img-fluid mb-4 sm-h-50" />
 </div>
