--- a/templates/recipe/show.html.twig
+++ b/templates/recipe/show.html.twig
@@ -108,9 +108,9 @@
 				{% endfor %}
 				{% endif %}
 				{% if is_granted('ROLE_ADMIN') %}
-					<button class="btn btn-primary fs-5 fw-bold mb-5"><a href="{{ path('recipe.recipes') }}" class="text-decoration-none">Vers la collection de recettes</a></button>
+					<button class="btn btn-primary fs-5 fw-bold mb-5 text-light"><a href="{{ path('recipe.recipes') }}" class="text-decoration-none">Vers la collection de recettes</a></button>
 				{% else %}
-						<button class="btn btn-primary fs-5 fw-bold mb-5"><a href="{{ path('recipe.index') }}" class="text-decoration-none">Vers la liste de recettes</a></button>
+						<button class="btn btn-primary fs-5 fw-bold mb-5 text-light"><a href="{{ path('recipe.index') }}" class="text-decoration-none">Vers la liste de recettes</a></button>
 				{% endif %}
 			</div>
 		</div>
