--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>
-			{% block title %}Welcome!
+			{% block title %}Bienvenu sur le site de Sandrine Coupart!
 			{% endblock %}
 		</title>
 		<link rel="stylesheet" href="{{ asset('assets/css/bootstrap_1.min.css') }}">
@@ -25,7 +25,7 @@
 			<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 		{% endblock %}
 	</head>
-	<body style="display: flex; flex-direction: column; min-height: 100vh; width: 100%;">
+	<body style="display: flex; flex-direction: column; min-height: 100vh; width: 100%; background-color: rgb(130 215 233);">
 		{% block header %}
 		{% include "partials/_nav.html.twig" %}
 		{% endblock %}
